src/objects/Sandbox_Error__c.object
<CustomObject>
    <description>Sandbox Error Object</description>
    <fields>
        <fullName>Error_Log__c</fullName>
        <description>Error Log Information</description>
        <inlineHelpText>Error Log Information</inlineHelpText>
        <label>Error Log</label>
        <length>96768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sandbox_ID__c</fullName>
        <description>Sandbox ID</description>
        <inlineHelpText>Sandbox ID</inlineHelpText>
        <label>Sandbox ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Name__c</fullName>
        <description>Sandbox Name</description>
        <inlineHelpText>Sandbox Name</inlineHelpText>
        <label>Sandbox Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Sandbox Error</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SE-{00000000}</displayFormat>
        <label>Sandbox Errors</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sandbox Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>